--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@langchain/core": "^0.3.18",
+    "@langchain/groq": "^0.1.2",
+    "@langchain/langgraph": "^0.2.20",
     "@prisma/client": "^5.22.0",
     "csvtojson": "^2.0.10",
+    "langchain": "^0.3.5",
     "next": "15.0.3",
     "prisma": "^5.22.0",
     "react": "19.0.0-rc-66855b96-20241106",
